fix z-index

--- a/src/css/oekakiHeader.css
+++ b/src/css/oekakiHeader.css
@@ -6,7 +6,7 @@
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 8;
+  z-index: 10000;
 }
 
 .menu {
