--- a/src/css/overlay.css
+++ b/src/css/overlay.css
@@ -2,7 +2,7 @@
 
 .overlay {
   background: rgba(0,0,0,0.5);
-  z-index: 5;
+  z-index: 10000;
   position: fixed;
   top: 0;
   right: 0;
